Work around a Chrome bug causing thumbnails to sometimes flicker before panning.
Chrome seems to occasionally render the left-top object position for a single
frame before activating the animation.  That rule doesn't seem to be needed, so
remove it.

--- a/resources/main.scss
+++ b/resources/main.scss
@@ -1310,7 +1310,6 @@ body.ui-on-hover .top-ui-box + .top-ui-box-padding
 
         &.horizontal-panning {
             animation-name: pan-thumbnail-horizontally;
-            object-position: left top;
 
             // The full animation is 4 seconds, and we want to start 20% in, at the halfway
             // point of the first left-right pan, where the pan is exactly in the center where
